<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Collect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >

        <TextView
            android:id="@+id/flight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/flight"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/origin"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/white"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/destination"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/pass"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/planned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/planned"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/terminal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/terminal"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/status"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/back2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            tools:layout_editor_absoluteY="731dp">

        </ListView>

        <TextView
            android:id="@+id/aaa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/flight"
            android:gravity="center"
            android:text="@string/inform3"
            android:textColor="@android:color/background_dark"
            android:textSize="50sp"
            android:textStyle="bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>