<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SecondPage"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/back3">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/flight"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/destination"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/terminal"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="175dp"
            android:layout_marginRight="175dp"
            android:text="@string/button"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        >

        <TextView
            android:id="@+id/flight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/flight"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/origin"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/white"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/destination"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/pass"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/planned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/planned"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/terminal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/terminal"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:ellipsize="none"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="false"
            android:text="@string/status"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ListView
        android:id="@+id/list2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        tools:layout_editor_absoluteY="731dp">

    </ListView>

    <TextView
        android:id="@+id/inform2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/flight"
        android:gravity="center"
        android:text="@string/inform2"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp"
        android:textStyle="bold" />


</LinearLayout>